# fonticon-fontawesome5

./: LICENSE  MANIFEST.in  README.md  bundle.py  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
fonticon_fa5/: __init__.py  fa5b.py  fa5brands.py  fa5r.py  fa5regular.py  fa5s.py  fa5solid.py
fonticon_fa5/_tests/: test_font.py
qtfi_fa5/: __init__.py  fa5brands.py  fa5regular.py  fa5solid.py
tests/: test_fonts.py
